# mosaic-rag

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  app.py  build_docker_x86.sh  docker-compose-only-redis.yml  docker-compose.yml  litellmtest.py  main.py  pyproject.toml  requirements.txt  test.ipynb  test.py  test_Daniel.py
.github/workflows/: mirror-to-gitlab.yml
app/: ConversationTask.py  PipelineTask.py  app.py  pipeline_backend.py
documentation/: add_pipeline_step.md
documentation/pictures/: DataFlowDiagrams.drawio  DataFlowDiagrams_Color.drawio
mosaicrs/: MosaicRS.py
mosaicrs/data_source/: DataSource.py  MosaicDataSource.py
mosaicrs/endpoint/: Endpoint.py  SummarizerEndpoint.py
mosaicrs/llm/: DeepSeekLLMInterface.py  LLMInterface.py  LiteLLMLLMInterface.py  T5Transformer.py
mosaicrs/pipeline/: LocalPipeline.py  Pipeline.py  PipelineErrorHandling.py  PipelineIntermediate.py  PipelineStepHandler.py
mosaicrs/pipeline_steps/: BasicContentExtractorStep.py  BasicSentimentAnalysisStep.py  ChromaDataSource.py  ContentExtractorStep.py  CurlieFilterStep.py  DocumentSummarizerStep.py  EmbeddingRerankerStep.py  GeoDataFilteringStep.py  GroupStyleLLMRerankerStep.py  MeiliDataSource.py  MosaicDataSource.py  PipelineStep.py  PunctuationRemovalStep.py  ReductionStep.py  RelevanceMarkingStep.py  ResultsSummarizerStep.py  RowProcessorPipelineStep.py  StopwordRemovalStep.py  SummarizerStep.py  TFIDFRerankerStep.py  TextStemmerStep.py  (+6 more)
scripts/: generate-embeddings.py  ingest-chroma.py
user_study_logger/: Dockerfile  docker-compose.yml  server.py
(+2 files in other folders)
